--- a/source/webapp/templates/memo_delete.html
+++ b/source/webapp/templates/memo_delete.html
@@ -11,8 +11,10 @@
     <p>Date: {{ memo.execution_date }}</p>
     <form action="{% url 'memo_delete' memo.pk %}" method="post">
         {% csrf_token %}
-        <p><input type="submit" value="yes" class="btn btn-sm btn-info"></p>
-        <p><a href="{% url "memo_view" memo.pk%}" class="btn btn-sm btn-info">No</a> </p>
+        <div class="d-flex justify-content-start">
+            <p class="mr-5"><input type="submit" value="yes" class="btn btn btn-info"></p>
+            <p><a href="{% url "memo_view" memo.pk%}" class="btn btn btn-info">no</a> </p>
+        </div>
     </form>
     <p></p>
     <h3>Detailed description:</h3>
