--- a/source/webapp/templates/partial/form.html
+++ b/source/webapp/templates/partial/form.html
@@ -6,5 +6,5 @@
     {% endfor %}
 
     <br/>
-    <input type="submit" class="btn btn-info" value="{{ button_text|default:'Submit' }}"/>
+    <input type="submit" class="btn btn-info text-uppercase" value="{{ button_text|default:'Submit' }}"/>
 </form>
