--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -1,12 +1,14 @@
 {% load staticfiles %}
 <!doctype html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}My Site{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/all.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
@@ -17,7 +19,7 @@
         <div class="container">
             <ul class="menu">
                 <li><a href="{% url 'index' %}" class="text-uppercase">Home</a></li>
-                <li><a href="{% url 'memo_create' %}" class="text-uppercase">Add new task</a></li>
+                <li><a href="{% url 'memo_create' %}" class="text-uppercase">Add new memo</a></li>
                 {% block menu %}{% endblock %}
             </ul>
         </div>
