--- a/source/webapp/templates/memo_view.html
+++ b/source/webapp/templates/memo_view.html
@@ -3,8 +3,8 @@
 {% block title %}View{% endblock %}
 
 {% block menu %}
-    <li><a href="{% url "memo_update" memo.pk %}">Update</a></li>
-    <li><a href="{% url "memo_delete" memo.pk %}">Delete</a></li>
+    <li><a href="{% url "memo_update" memo.pk %}" class="text-uppercase">Update</a></li>
+    <li><a href="{% url "memo_delete" memo.pk %}" class="text-uppercase">Delete</a></li>
 {% endblock %}
 
 {% block content %}
