--- a/source/webapp/templates/partial/form_field.html
+++ b/source/webapp/templates/partial/form_field.html
@@ -1,4 +1,4 @@
-<label for="{{ field.id_for_label }}">{{ field.label }}:</label><br/>
+<label for="{{ field.id_for_label }}" class="text-uppercase text-secondary">{{ field.label }}:</label><br/>
 {{ field }}<br/>
 {% for error in field.errors %}
     <p class="error">{{ error }}</p>
